--- a/chat.html
+++ b/chat.html
@@ -1,70 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ably Chat</title>
-    <script src="https://cdn.ably.io/lib/ably.min-1.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 20px;
-        }
-        #chatbox {
-            width: 80%;
-            height: 300px;
-            border: 1px solid black;
-            overflow-y: auto;
-            margin: 10px auto;
-            padding: 10px;
-            background: #f9f9f9;
-        }
-        #message {
-            width: 70%;
-            padding: 10px;
-        }
-        #send {
-            padding: 10px;
-            background: black;
-            color: white;
-            cursor: pointer;
-        }
-    </style>
+    <title>Boredom Hub - Chat</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.ably.com/lib/ably.min-1.js"></script>
 </head>
 <body>
+    <div class="sidebar">
+        <a href="index.html" ">Home</a>
+        <a href="games.html"">Games</a>
+        <a href="about.html" ">About Us</a>
+        <a href="contact.html"">Contact</a>   
+        <a href="chat.html" ">Chat</a> 
+      <a href="rabbitAI.html" ">rabbitAI calculator</a>
+        <a href="partners.html" "> Our Partners</a>
+         <a href="features.html"">Features</a>
+        <img src="Evicly, this is boredom hub logo (1).png" alt="Boredom Hub Logo" style="width: 150px; margin-top: 20px;">
+    </div>
+    <div class="content">
+        <h2>Chat Room</h2>
+        <p id="authStatus">Not logged in</p>
+        <button onclick="signIn()">Sign In</button>
+        <button onclick="signOut()">Sign Out</button>
+        <br><br>
+        <input type="text" id="usernameInput" placeholder="Enter Username">
+        <input type="text" id="messageInput" placeholder="Type a message">
+        <button onclick="sendMessage()">Send</button>
+        <div id="chatBox" class="chat-box" style="max-height: 400px; overflow-y: auto;"></div>
+    </div>
 
-    <h1>Ably Chat</h1>
-    <div id="chatbox"></div>
-    <input type="text" id="message" placeholder="Type your message...">
-    <button id="send">Send</button>
+<script>
+    const ably = new Ably.Realtime("mGqA8g.tKm8cg:BXet5NQMtxfr8k8I4Ls0MEzeQxmsQHihc80xDsYd-Ko");
+    const channel = ably.channels.get("chat-room");
 
-    <script>
-        // Replace with your Ably API key
-        const ably = new Ably.Realtime("iBX7Aw.-4oZBg:hW4eg6cFcOToKuBl32o8e61B5FMgjUoM9HoIXCqw3jg");
-        const channel = ably.channels.get("chat-room");
+    let mutedUsers = {}; // Stores globally muted users
+    const modEmails = [ "878197@dpsk12.net", "871341@dpsk12.net", "871316@dpsk12.net"]; // Mods
+    const devEmails = ["856030@dpsk12.net", "866537@dpsk12.net", "871491@dpsk12.net","872654@dpsk12.net"]; // Devs
 
-        const chatbox = document.getElementById("chatbox");
-        const messageInput = document.getElementById("message");
-        const sendButton = document.getElementById("send");
+    function signIn() {
+        const email = prompt("Enter your email:");
+        const username = prompt("Enter your username:");
 
-        // Send message on button click
-        sendButton.addEventListener("click", () => {
-            const message = messageInput.value.trim();
-            if (message) {
-                channel.publish("message", { text: message });
-                messageInput.value = "";
+        if (!email || !username) {
+            alert("Email and username are required!");
+            return;
+        }
+
+        sessionStorage.setItem("userEmail", email);
+        sessionStorage.setItem("username", username);
+        document.getElementById("authStatus").innerText = `Logged in as ${email}`;
+    }
+
+    function signOut() {
+        sessionStorage.removeItem("userEmail");
+        sessionStorage.removeItem("username");
+        document.getElementById("authStatus").innerText = "Not logged in";
+    }
+
+    function sendMessage() {
+        const messageInput = document.getElementById("messageInput").value.trim();
+        const email = sessionStorage.getItem("userEmail");
+        const username = sessionStorage.getItem("username");
+
+        if (!email || !username) {
+            alert("You must be signed in to send messages.");
+            return;
+        }
+
+        // **Check if user is muted before sending**
+        if (mutedUsers[email]) {
+            alert("You are muted and cannot send messages.");
+            return;
+        }
+
+        // **Handle mute/unmute commands**
+        if (messageInput.startsWith("/mute")) {
+            handleMuteCommand(messageInput);
+            return;
+        }
+        if (messageInput.startsWith("/unmute")) {
+            handleUnmuteCommand(messageInput);
+            return;
+        }
+
+        // **Send message**
+        channel.publish("message", { text: messageInput, user: email, username: username });
+        document.getElementById("messageInput").value = "";
+    }
+
+    function handleMuteCommand(message) {
+        const email = sessionStorage.getItem("userEmail");
+        if (!email) return;
+
+        // **Only Mods, Devs, and Head Dev can mute**
+        if (!modEmails.includes(email) && !devEmails.includes(email)) {
+            alert("You do not have permission to mute users.");
+            return;
+        }
+
+        const messageParts = message.split(" ");
+        if (messageParts.length < 2) {
+            alert("Usage: /mute <email>");
+            return;
+        }
+
+        const emailToMute = messageParts[1];
+
+        if (!emailToMute.includes("@")) {
+            alert("Invalid email format.");
+            return;
+        }
+
+        mutedUsers[emailToMute] = true; // Mark user as muted
+        alert(`${emailToMute} has been muted.`);
+        channel.publish("mute", { user: emailToMute }); // Notify everyone in chat
+    }
+
+    function handleUnmuteCommand(message) {
+        const email = sessionStorage.getItem("userEmail");
+        if (!email) return;
+
+        // **Only Mods, Devs, and Head Dev can unmute**
+        if (!modEmails.includes(email) && !devEmails.includes(email)) {
+            alert("You do not have permission to unmute users.");
+            return;
+        }
+
+        const messageParts = message.split(" ");
+        if (messageParts.length < 2) {
+            alert("Usage: /unmute <email>");
+            return;
+        }
+
+        const emailToUnmute = messageParts[1];
+
+        if (!emailToUnmute.includes("@")) {
+            alert("Invalid email format.");
+            return;
+        }
+
+        delete mutedUsers[emailToUnmute]; // Remove user from mute list
+        alert(`${emailToUnmute} has been unmuted.`);
+        channel.publish("unmute", { user: emailToUnmute }); // Notify everyone
+    }
+
+    function loadMessages() {
+        channel.subscribe("message", (message) => {
+            const data = message.data;
+            const chatBox = document.getElementById("chatBox");
+
+            // **Block messages from muted users globally**
+            if (mutedUsers[data.user]) {
+                return; // Hide message for all users
             }
+
+            const messageElement = document.createElement("p");
+
+            let extraStyle = "";
+            let roleTag = "";
+            let userEmail = data.user;
+
+            // **Handle mod users' display and email visibility**
+            if (modEmails.includes(data.user)) {
+                extraStyle = "color: yellow;";
+                roleTag = " <strong>[MOD]</strong>";
+                if (!devEmails.includes(sessionStorage.getItem("userEmail"))) {
+                    userEmail = "";
+                }
+            } else if (devEmails.includes(data.user)) {
+                extraStyle = "color: red;";
+                roleTag = " <strong>[DEV]</strong>";
+                userEmail = "";
+            }
+
+            messageElement.innerHTML = `<strong style="${extraStyle}">${data.username} (${userEmail})${roleTag}:</strong> ${data.text}`;
+            chatBox.appendChild(messageElement);
+            chatBox.scrollTop = chatBox.scrollHeight;
         });
 
-        // Listen for incoming messages
-        channel.subscribe("message", (msg) => {
-            const p = document.createElement("p");
-            p.textContent = msg.data.text;
-            chatbox.appendChild(p);
-            chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
+        // **Listen for mute/unmute updates**
+        channel.subscribe("mute", (message) => {
+            mutedUsers[message.data.user] = true;
         });
-    </script>
+
+        channel.subscribe("unmute", (message) => {
+            delete mutedUsers[message.data.user];
+        });
+    }
+
+    window.onload = () => {
+        const email = sessionStorage.getItem("userEmail");
+        if (email) {
+            document.getElementById("authStatus").innerText = `Logged in as ${email}`;
+        }
+        loadMessages();
+    };
+</script>
 
 </body>
 </html>
